fix covers on tablet holds page:
- also need to use small/medium/large covers for various things:
  . small for lists (search, new items)
  . medium for details modal
  . large for holds/checkouts

--- a/src/pages/holds/holds.scss
+++ b/src/pages/holds/holds.scss
@@ -1,3 +1,3 @@
 page-holds {
-    img { max-height: 150px; width: auto; }
+
 }
